--- a/.env
+++ b/.env
@@ -27,6 +27,10 @@ APP_SECRET=c6165928e6bbcd6b2938641d6d1baaa4
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+POSTGRES_DB=guestbook
+POSTGRES_PASSWORD=123456
+POSTGRES_USER=postgres
+DATABASE_URL="postgresql://postgres:123456@127.0.0.1:5432/guestbook?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
