--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -18,7 +18,8 @@ framework:
         routing:
             Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
-            Symfony\Component\Notifier\Message\SmsMessage: async
+            Symfony\Component\Notifier\Message\SmsMessage: async 
+            App\Message\CommentMessage: async
 
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
