--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ POSTGRES_USER=postgres
 REDIS_PORT=6739
 LOCAL_POSTGRES_PORT=5434
 DOCKER_POSTGRES_PORT=5432
-XDEBUG_MODE=debug
+XDEBUG_MODE=profile
 DATABASE_URL="postgresql://postgres:123456@db:5432/guestbook_db?serverVersion=9.6&charset=utf8"
