--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -3,7 +3,6 @@ framework:
         failure_transport: failed
 
         transports:
-            # https://symfony.com/doc/current/messenger.html#transport-configuration
             async:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
                 options:
@@ -13,13 +12,9 @@ framework:
                     max_retries: 3
                     multiplier: 2
             failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
 
         routing:
             Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async 
-            App\Message\CommentMessage: async
-
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            # App\Message\CommentMessage: async
