--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,36 +2,36 @@ version: '3'
 
 services:
 
-  web:
-    image: nginx:latest
-    ports:
-      - "82:80" #local port : docker port
-    volumes:
-      - ./.docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./:/var/www/html
-    depends_on:
-      - app
+  # web:
+  #   image: nginx:latest
+  #   ports:
+  #     - "82:80" #local port : docker port
+  #   volumes:
+  #     - ./.docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+  #     - ./:/var/www/html
+  #   depends_on:
+  #     - app
   
-  app:
-    build:
-      dockerfile: ./.docker/php/Dockerfile
-    volumes:
-      - /var/www/html/vendor
-      - ./:/var/www/html
-      - ./.docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini:ro
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      PGDATA: /var/lib/postgresql/data/pgdata
-      REDIS_HOST: cache
-      DATABASE_URL: ${DATABASE_URL}
-      REDIS_PORT: ${REDIS_PORT}
-      XDEBUG_MODE: "${XDEBUG_MODE:-debug}"
-    depends_on:
-      - db
-    extra_hosts:
-      - host.docker.internal:host-gateway
+  # app:
+  #   build:
+  #     dockerfile: ./.docker/php/Dockerfile
+  #   volumes:
+  #     - /var/www/html/vendor
+  #     - ./:/var/www/html
+  #     - ./.docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini:ro
+  #   environment:
+  #     POSTGRES_USER: ${POSTGRES_USER}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #     POSTGRES_DB: ${POSTGRES_DB}
+  #     PGDATA: /var/lib/postgresql/data/pgdata
+  #     REDIS_HOST: cache
+  #     DATABASE_URL: ${DATABASE_URL}
+  #     REDIS_PORT: ${REDIS_PORT}
+  #     XDEBUG_MODE: "${XDEBUG_MODE:-debug}"
+  #   depends_on:
+  #     - db
+  #   extra_hosts:
+  #     - host.docker.internal:host-gateway
   
   db:
     image: postgres:9.6
