--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,5 +51,9 @@ services:
   cache:
     image: redis:6.0
 
+  mailer:
+    image: schickling/mailcatcher
+    ports: [1025, 1080]
+
 volumes:
   postgres_data:
