--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,9 @@ services:
 
   mailer:
     image: schickling/mailcatcher
-    ports: [1025, 1080]
+    ports:
+      - "1025"
+      - "8001:1080"
 
 volumes:
   postgres_data:
