--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -14,7 +14,7 @@ framework:
             failed: 'doctrine://default?queue_name=failed'
 
         routing:
-            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
+            # Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async 
             # App\Message\CommentMessage: async
