--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ LOCAL_POSTGRES_PORT=5434
 DOCKER_POSTGRES_PORT=5432
 XDEBUG_MODE=profile
 DATABASE_URL="postgresql://postgres:123456@db:5432/guestbook_db?serverVersion=9.6&charset=utf8"
-MAILER_DSN=smtp://mailer:1025
+MAILER_DSN=smtp://127.0.0.1:1025
